kubernetes/jorp/prod/microblog/01-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microblog
spec:
  selector:
    matchLabels:
      app: microblog
  replicas: 2
  template:
    metadata:
      labels:
        app: microblog
    spec:
      containers:
      - image: jawnta/microblog:v0.3.0
        imagePullPolicy: Always
        name: microblog
        ports:
        - containerPort: 5000
