kubernetes/jorp/prod/microblog/02-service.yml
apiVersion: v1
kind: Service
metadata:
  name: microblog
spec:
  selector:
    app: microblog
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
