kubernetes/jorp/prod/microblog/03-ingress.yml
# 03-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microblog-ingress
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - microbloggu.me
    secretName: demo-tls
  rules:
  - host: microbloggu.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: microblog
            port:
              number: 80
